Bug 58384, 86279. Be sure to trim letter spacing as well as word spacing in TrimTrailingWhiteSpace(). Also, explicitly add letter spacing where appropriate, instead of including it in word spacing. r=shanjian, sr=attinasi.